scripts/nullness/original/url632301a43b_octomarat_Drunkard_tgz-pJ8-ru_drunkard_game_DrunkardTheGameJ8.txt
../original/url632301a43b_octomarat_Drunkard_tgz-pJ8-ru_drunkard_game_DrunkardTheGameJ8/src/ru/drunkard/utility/Point.java:9: error: [override.param] Incompatible parameter type for other.
    public boolean equals(Object other) {
                                 ^
  found   : @Initialized @NonNull Object
  required: @Initialized @Nullable Object
  Consequence: method in @Initialized @NonNull Point
    @Initialized @NonNull boolean equals(@Initialized @NonNull Point this, @Initialized @NonNull Object p0)
  cannot override method in @Initialized @NonNull Object
    @Initialized @NonNull boolean equals(@Initialized @NonNull Object this, @Initialized @Nullable Object p0)
../original/url632301a43b_octomarat_Drunkard_tgz-pJ8-ru_drunkard_game_DrunkardTheGameJ8/src/ru/drunkard/game/GameController.java:32: error: [assignment] incompatible types in assignment.
    private GameField gameField = null;
                                  ^
  found   : null (NullType)
  required: @Initialized @NonNull GameField
../original/url632301a43b_octomarat_Drunkard_tgz-pJ8-ru_drunkard_game_DrunkardTheGameJ8/src/ru/drunkard/game/GameController.java:48: error: [method.invocation] call to createCop() not allowed on the given receiver.
        gameField.addNewObject(createCop());
                                        ^
  found   : @UnderInitialization(ru.drunkard.game.GameController.class) @NonNull GameController
  required: @Initialized @NonNull GameController
../original/url632301a43b_octomarat_Drunkard_tgz-pJ8-ru_drunkard_game_DrunkardTheGameJ8/src/ru/drunkard/game/GameController.java:49: error: [method.invocation] call to createHobo() not allowed on the given receiver.
        gameField.addNewObject(createHobo());
                                         ^
  found   : @UnderInitialization(ru.drunkard.game.GameController.class) @NonNull GameController
  required: @Initialized @NonNull GameController
../original/url632301a43b_octomarat_Drunkard_tgz-pJ8-ru_drunkard_game_DrunkardTheGameJ8/src/ru/drunkard/game/GameController.java:93: error: [argument] incompatible argument for parameter special of GameField.getFreeNeighbours.
        List<Point> availableExits = gameField.getFreeNeighbours(new Point(TAVERN_X, TAVERN_Y), null);
                                                                                                ^
  found   : null (NullType)
  required: @Initialized @NonNull Point
../original/url632301a43b_octomarat_Drunkard_tgz-pJ8-ru_drunkard_game_DrunkardTheGameJ8/src/ru/drunkard/fieldobjects/Cop.java:25: error: [argument] incompatible argument for parameter special of GameField.getFreeNeighbours.
        List<Point> availableExits = field.getFreeNeighbours(policeStationPos, null);
                                                                               ^
  found   : null (NullType)
  required: @Initialized @NonNull Point
../original/url632301a43b_octomarat_Drunkard_tgz-pJ8-ru_drunkard_game_DrunkardTheGameJ8/src/ru/drunkard/fieldobjects/Cop.java:44: error: [argument] incompatible argument for parameter object of GameField.setObjectInSector.
            field.setObjectInSector(nextPos.x, nextPos.y, null);
                                                          ^
  found   : null (NullType)
  required: @Initialized @NonNull IFieldObj
../original/url632301a43b_octomarat_Drunkard_tgz-pJ8-ru_drunkard_game_DrunkardTheGameJ8/src/ru/drunkard/fieldobjects/Cop.java:62: error: [argument] incompatible argument for parameter object of GameField.setObjectInSector.
        field.setObjectInSector(pos.x, pos.y, null);
                                              ^
  found   : null (NullType)
  required: @Initialized @NonNull IFieldObj
../original/url632301a43b_octomarat_Drunkard_tgz-pJ8-ru_drunkard_game_DrunkardTheGameJ8/src/ru/drunkard/fieldobjects/DirectedMovableObj.java:32: error: [return] incompatible types in return.
        return null;
               ^
  type of expression: null (NullType)
  method return type: @Initialized @NonNull Point
../original/url632301a43b_octomarat_Drunkard_tgz-pJ8-ru_drunkard_game_DrunkardTheGameJ8/src/ru/drunkard/fieldobjects/MovableObj.java:13: error: [argument] incompatible argument for parameter object of GameField.setObjectInSector.
            field.setObjectInSector(pos.x, pos.y, null);
                                                  ^
  found   : null (NullType)
  required: @Initialized @NonNull IFieldObj
../original/url632301a43b_octomarat_Drunkard_tgz-pJ8-ru_drunkard_game_DrunkardTheGameJ8/src/ru/drunkard/fieldobjects/Hobo.java:31: error: [argument] incompatible argument for parameter special of GameField.getFreeNeighbours.
        List<Point> availableExits = field.getFreeNeighbours(glassStationPos, null);
                                                                              ^
  found   : null (NullType)
  required: @Initialized @NonNull Point
../original/url632301a43b_octomarat_Drunkard_tgz-pJ8-ru_drunkard_game_DrunkardTheGameJ8/src/ru/drunkard/fieldobjects/Hobo.java:49: error: [argument] incompatible argument for parameter object of GameField.setObjectInSector.
            field.setObjectInSector(nextPos.x, nextPos.y, null);
                                                          ^
  found   : null (NullType)
  required: @Initialized @NonNull IFieldObj
../original/url632301a43b_octomarat_Drunkard_tgz-pJ8-ru_drunkard_game_DrunkardTheGameJ8/src/ru/drunkard/fieldobjects/Hobo.java:65: error: [argument] incompatible argument for parameter object of GameField.setObjectInSector.
        field.setObjectInSector(pos.x, pos.y, null);
                                              ^
  found   : null (NullType)
  required: @Initialized @NonNull IFieldObj
../original/url632301a43b_octomarat_Drunkard_tgz-pJ8-ru_drunkard_game_DrunkardTheGameJ8/src/ru/drunkard/fieldobjects/Drunkard.java:54: error: [assignment] incompatible types in assignment.
                bottle = null;
                         ^
  found   : null (NullType)
  required: @Initialized @NonNull Bottle
../original/url632301a43b_octomarat_Drunkard_tgz-pJ8-ru_drunkard_game_DrunkardTheGameJ8/src/ru/drunkard/movestrategies/ShortestPathMoveStrategy.java:42: error: [dereference.of.nullable] dereference of possibly-null reference currentInfo
                if(neighbourInfo == null || neighbourInfo.pathLength > currentInfo.pathLength + 1) {
                                                                       ^
../original/url632301a43b_octomarat_Drunkard_tgz-pJ8-ru_drunkard_game_DrunkardTheGameJ8/src/ru/drunkard/movestrategies/ShortestPathMoveStrategy.java:43: error: [dereference.of.nullable] dereference of possibly-null reference currentInfo
                    nodesInfo.put(neighbour, new BFSNodeInfo(current, currentInfo.pathLength + 1));
                                                                      ^
../original/url632301a43b_octomarat_Drunkard_tgz-pJ8-ru_drunkard_game_DrunkardTheGameJ8/src/ru/drunkard/movestrategies/ShortestPathMoveStrategy.java:59: error: [dereference.of.nullable] dereference of possibly-null reference currentInfo
        while (!currentInfo.predecessor.equals(current)) {
                ^
../original/url632301a43b_octomarat_Drunkard_tgz-pJ8-ru_drunkard_game_DrunkardTheGameJ8/src/ru/drunkard/field/BasicField.java:25: error: [argument] incompatible argument for parameter object of Sector constructor.
                row.add(new Sector(null));
                                   ^
  found   : null (NullType)
  required: @Initialized @NonNull IFieldObj
../original/url632301a43b_octomarat_Drunkard_tgz-pJ8-ru_drunkard_game_DrunkardTheGameJ8/src/ru/drunkard/gameprinters/BasicGamePrinter.java:26: error: [initialization.fields.uninitialized] the constructor does not initialize fields: lightAreaStart, lightAreaEnd
    protected BasicGamePrinter(int fieldWidth, int fieldHeight) {
              ^
../original/url632301a43b_octomarat_Drunkard_tgz-pJ8-ru_drunkard_game_DrunkardTheGameJ8/src/ru/drunkard/gameprinters/BasicGamePrinter.java:28: error: [method.invocation] call to initFramePart(java.util.List<java.lang.Character>,int) not allowed on the given receiver.
        initFramePart(frameUpperPart, fieldWidth + 2);
                     ^
  found   : @UnderInitialization @NonNull BasicGamePrinter
  required: @Initialized @NonNull BasicGamePrinter
../original/url632301a43b_octomarat_Drunkard_tgz-pJ8-ru_drunkard_game_DrunkardTheGameJ8/src/ru/drunkard/gameprinters/BasicGamePrinter.java:30: error: [method.invocation] call to initFramePart(java.util.List<java.lang.Character>,int) not allowed on the given receiver.
        initFramePart(frameBottomPart, fieldWidth + 2);
                     ^
  found   : @UnderInitialization @NonNull BasicGamePrinter
  required: @Initialized @NonNull BasicGamePrinter
../original/url632301a43b_octomarat_Drunkard_tgz-pJ8-ru_drunkard_game_DrunkardTheGameJ8/src/ru/drunkard/gameprinters/BasicGamePrinter.java:32: error: [method.invocation] call to initFramePart(java.util.List<java.lang.Character>,int) not allowed on the given receiver.
        initFramePart(frameRightPart, fieldHeight);
                     ^
  found   : @UnderInitialization @NonNull BasicGamePrinter
  required: @Initialized @NonNull BasicGamePrinter
../original/url632301a43b_octomarat_Drunkard_tgz-pJ8-ru_drunkard_game_DrunkardTheGameJ8/src/ru/drunkard/gameprinters/BasicGamePrinter.java:34: error: [method.invocation] call to initFramePart(java.util.List<java.lang.Character>,int) not allowed on the given receiver.
        initFramePart(frameLeftPart, fieldHeight);
                     ^
  found   : @UnderInitialization @NonNull BasicGamePrinter
  required: @Initialized @NonNull BasicGamePrinter
23 errors
